Bug 288691 - Dolphin does not refresh the thumbnails
Summary: Dolphin does not refresh the thumbnails
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: view-engine: icons mode (other bugs)
Version First Reported In: 1.99
Platform: Chakra Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Penz
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-11 01:51 UTC by Manuel Tortosa
Modified: 2011-12-16 21:19 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.8.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manuel Tortosa 2011-12-11 01:51:38 UTC
Version:           1.99 (using Devel) 
OS:                Linux

Once the thumbnail cache is created, dolphin does not refresh the thumbnails, even if i click several times the refresh button or pressing F5 several times.

This image shows how i changed a file, but the thumb is wrong:
http://wstaw.org/w/OBS/


Reproducible: Always

Steps to Reproduce:
Open a folder with several image files, enable the thumbs, wait until all the thumbs are created and overwrite some files with another content and the same name, then press F5 or click on refresh

Actual Results:  
The thumbnails are not refreshed

Expected Results:  
Refreshed thumbnails

OS: Linux (x86_64) release 3.1-CHAKRA
Compiler: gcc
Comment 1 Frank Reininghaus 2011-12-12 22:41:06 UTC
Thanks for the bug report! The behaviour I'm getting in master (in every view mode) seems to be slightly different from what you get:

If I overwrite an image file with something else:

a) The thumbnail is replaced by a generic icon, but when presssing F5, the new thumbnail is shown (regression from KDE 4.7).

b) The preview in the Information Panel is not updated first. Only after pressing F5, the preview of the new image is shown.
Comment 2 Peter Penz 2011-12-16 21:06:39 UTC
Git commit bb192503cac22b08f0dd0c82e6bf059be8f98265 by Peter Penz.
Committed on 16/12/2011 at 22:01.
Pushed by ppenz into branch 'master'.

Update the roles if items have been changed

The code "// TODO..." in slotItemsChanged() obviously was not
sufficient ;-)

BUG: 288691
BUG: 288824
BUG: 288921
FIXED-IN: 4.8.0

M  +42   -38   dolphin/src/kitemviews/kfileitemmodelrolesupdater.cpp
M  +23   -0    dolphin/src/kitemviews/kfileitemmodelrolesupdater.h

http://commits.kde.org/kde-baseapps/bb192503cac22b08f0dd0c82e6bf059be8f98265
Comment 3 Manuel Tortosa 2011-12-16 21:19:18 UTC
Thanks, will backport the commit and test it.